# wann-o-meter

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  astro.config.mjs  package.json  vitest.config.ts
data/: LICENSE  community-sources.txt  homepage-questions.yaml
lib/: all-content.ts  calendar-colors.ts  calendar-sources.test.ts  calendar-sources.ts  countries.ts  date-display.test.ts  date-display.ts  date-grid.test.ts  date-grid.ts  date.test.ts  date.ts  format-date.ts  github-issue.ts  holidays.test.ts  holidays.ts  homepage-questions.test.ts  homepage-questions.ts  ics.test.ts  ics.ts  materialization.test.ts  materialization.ts  pages-schema.test.ts  pages-schema.ts  (+16 more)
pipeline/: README.md  main.py  pyproject.toml  scraper.py  sources.yaml
pipeline/config/: registries.yaml
pipeline/core/: extraction.py  fetch.py  generic_source.py  llm.py  publish.py  runner.py  store.py  types.py  validate.py
pipeline/data/registries/: museum_de.json  university_de.json
pipeline/fixtures/schulferien_kmk/: erwartet.yaml  raw_sample.html
pipeline/harvest/: cli.py  registry.py  types.py
pipeline/static/: theme.css
pipeline/templates/: _base.html  _discovered_table.html  _harvest_registry_table.html  _pages_table.html  _run_stats_content.html  _scraped_table.html  _status_fragment.html  crawler.html  crawler_run.html  dashboard.html
pipeline/tests/: test_extraction.py  test_generic_source.py  test_harvest_registry.py  test_llm.py  test_main_categories.py  test_main_routes.py  test_scraper.py  test_store.py
pipeline/tools/: dwd_klima.py
(+89 files in other folders)
