[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml",
    "trafilatura>=2.1.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]
